# my-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_inference.py
data/: demandhistory.json  hospitalprofiles.json  peopledataset.json  survivalparam.json  templateincident.json  trafficpattern.json
docker/: entrypoint.sh  gunicorn.conf.py
docs/: emergi_automation.html  emergi_docs.html  emergi_health.html  emergi_login.html  emergi_openapi.html  update_theme.py
scripts/: generatescenario.py  runbaseline.sh  validatesubmission.sh
server/: __init__.py  app.py  env.py  main.py
server/graders/: __init__.py  basegrader.py  taskgrader1.py  taskgrader2.py  taskgrader3.py  taskgrader4.py  taskgrader5.py  taskgrader6.py  taskgrader7.py  taskgrader8.py  taskgrader9.py
server/medical/: __init__.py  protocolchecker.py  survivalcurves.py  traumascoring.py  triage.py
server/models/: __init__.py  action.py  observation.py  reward.py  state.py
server/simulation/: __init__.py  communication.py  demandforecaster.py  fleetsimulator.py  hospitalnetwork.py  incidentengine.py  multiagency.py  mutualaid.py  trafficmodel.py
static/: index.html  package-lock.json  package.json  vite.config.ts
static/src/: App.tsx  index.css
static/src/api/: client.ts  websocket.ts
static/src/components/bio-archives/: BioArchives.tsx
static/src/context/: AdminContext.tsx
static/src/hooks/: useSimulation.ts
static/src/types/: speech.d.ts
static/src/utils/: formatters.ts
tests/: testenv.py  testgrader.py
(+14 files in other folders)
