[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergi-env"
version = "2.0.0"
description = "Emergency Medical Intelligence & Resource Governance Environment"
readme = "README.md"
authors = [{ name = "sameerdubey2507" }]
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280"
]

[tool.setuptools]
packages = ["server", "docs"]
